--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -73,3 +73,48 @@ Segóine
 
 ;Become a fan
 Devénta 'n fan
+
+;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Firefox o l'é rìcco de inovaçioìn che te permìttan de scrîve mêno, navegâ de ciù e acêdere a-o Web inte 'n mòddo sénplice e velôce.
+
+;Freedom from typing
+Libertæ da tastêa
+
+
+;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+A schermâ iniçiâ a reconósce i teu scîti preferîi e te consénte de navigâ sénza digitâ nìnte (ò squæxi).
+
+
+;Best of both worlds
+O mêgio di doî móndi
+
+
+;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefox pe Android o l'é otimizòu pe-a navigaçión in sci telefonìn e tablet.
+
+
+;Browse quick and easy
+Navigaçión sénplice e velôce
+
+
+;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Funçioìn cómme Sync, a navegaçión a féuggi e-i segnalìbbri con 'na sciacâ te permìttan de razónze a-o xêuo tùtto quéllo che tw sèrve.
+
+
+;<a %s>Need help?</a> Visit our Firefox for Android Support site.
+;<a %s>Bezéugno d'agiùtto?</a> Vìxita o nòstro scîto de sopòrto de Firefox pe Android.
+
+
+;Download and test the build that’s right for you.
+Scàrega e prêuva a versción che fâ pe ti.
+
+
+;See all our channels for mobile »
+Véddi tùtti i canâ de agiornénto pe telefonìn »
+
+
+
+
+
+
+
