--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -75,7 +75,7 @@ Segóine
 Devénta 'n fan
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox o l'é rìcco de inovaçioìn che te permìttan de scrîve mêno, navegâ de ciù e acêdere a-o Web inte 'n mòddo sénplice e velôce.
+Firefox o l'é pìn de inovaçioìn che te permìttan de scrîve mêno, navegâ de ciù e acêdere a-o Web inte 'n mòddo sénplice e velôce.
 
 ;Freedom from typing
 Libertæ da tastêa
