--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -110,7 +110,7 @@ Scàrega e prêuva a versción che fâ pe ti.
 
 
 ;See all our channels for mobile »
-Véddi tùtti i canâ de agiornénto pe telefonìn »
+Véddi tùtti i canâ de agiornaménto pe telefonìn »
 
 
 
