--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -60,7 +60,7 @@ Ti priviæ e carateristìche a l'avangoàrdia e ti ne daiæ coménti pe agiutân
 Struménti do svilopatô
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-Ti peu instalâ o versción pe telefonìn de Firefox into teu computer pe testâ, dâ di coménti, e fâ conponénti azónti.
+Ti peu instalâ a versción pe telefonìn de Firefox into teu computer pe testâ, dâ di coménti, e fâ conponénti azónti.
 
 ;Connect With Firefox for Mobile:
 Conétti con Firefox pe telefonìn:
