--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -98,7 +98,7 @@ Navigaçión sénplice e velôce
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Funçioìn cómme Sync, a navegaçión a féuggi e-i segnalìbbri con 'na sciacâ te permìttan de razónze a-o xêuo tùtto quéllo che tw sèrve.
+Funçioìn cómme Sync, a navegaçión a féuggi e-i segnalìbbri con 'na sciacâ te permìttan de razónze a-o xêuo tùtto quéllo che te sèrve.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
