--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -94,7 +94,7 @@ Firefox pe Android o l'é otimizòu pe-a navigaçión in sci telefonìn e tablet
 
 
 ;Browse quick and easy
-Navigaçión sénplice e velôce
+Navegaçión sénplice e velôce
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
