--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -90,7 +90,7 @@ O mêgio di doî móndi
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox pe Android o l'é otimizòu pe-a navigaçión in sci telefonìn e tablet.
+Firefox pe Android o l'é otimizòu pe-a navegaçión in sci telefonìn e tablet.
 
 
 ;Browse quick and easy
