--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -82,7 +82,7 @@ Libertæ da tastêa
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-A schermâ iniçiâ a reconósce i teu scîti preferîi e te consénte de navigâ sénza digitâ nìnte (ò squæxi).
+A schermâ iniçiâ a reconósce i teu scîti preferîi e te consénte de navigâ sénsa digitâ nìnte (ò squæxi).
 
 
 ;Best of both worlds
