--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -57,7 +57,7 @@ de bàdda da iTunes
 Ti priviæ e carateristìche a l'avangoàrdia e ti ne daiæ coménti pe agiutâne a megiorâ e rafinâ quéllo che saiâ inta versción finâle.
 
 ;Developer Tools
-Struménti do svilopatô
+Struménti do svilupatô
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
 Ti peu instalâ a versción pe telefonìn de Firefox into teu computer pe testâ, dâ di coménti, e fâ conponénti azónti.
