l10n: update partners.lang files to use html entities
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106296 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/marketplace/partners.lang
+++ b/pt-BR/marketplace/partners.lang
@@ -13,8 +13,8 @@ A Mozilla está trazendo seus valores fundamentais — abertura, liberdade de es
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 Este vídeo requer um navegador com suporte a vídeo aberto ou o plug-in <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
-;Learn all about creating HTML5 apps at the Mozilla Developer Network »
-Saiba tudo sobre como criar aplicativos usando HTML5 no Mozilla Developer Network »
+;Learn all about creating HTML5 apps at the Mozilla Developer Network&nbsp;»
+Saiba tudo sobre como criar aplicativos usando HTML5 no Mozilla Developer Network&nbsp;»
 
 ;The Mozilla apps platform
 A plataforma de aplicativos Mozilla
@@ -24,9 +24,6 @@ Mozilla Marketplace {ok}
 
 ;Building apps for the Web provides developers with full control over content, functionality and how apps are distributed, including access to hundreds of millions of Firefox users through the Mozilla Marketplace.
 Construir aplicativos para a web permite que desenvolvedores tenham maior controle sobre o conteúdo, funcionalidades e como o aplicativo será distribuído, incluindo acesso a centenas de milhares de usuários do Firefox por meio do Mozilla Marketplace.
-
-;Submit your app »
-Envie seu aplicativo »
 
 ;Launch your app on the Web
 Carregue seu aplicativo na web
@@ -45,3 +42,7 @@ Usando padrões abertos da internet e as APIs concebidas pela Mozilla, ótimas e
 
 ;Test your app with a committed group of early adopters.
 Testar seus aplicativos com um grupo empenhado de usuários pioneiros.
+
+
+;Submit your app&nbsp;»
+Envie seu aplicativo »
