--- a/fr/marketplace/partners.lang
+++ b/fr/marketplace/partners.lang
@@ -17,8 +17,8 @@ Mozilla apporte au monde des applications ses valeurs essentielles&nbsp;: l'ouve
 La plateforme Mozilla des applications
 
 
-;Submit your app »
-Soumettez votre application »
+;Submit your app&nbsp;»
+Soumettez votre application&nbsp;»
 
 
 ;Building apps for the Web provides developers with full control over content, functionality and how apps are distributed, including access to hundreds of millions of Firefox users through the Mozilla Marketplace.
@@ -27,8 +27,8 @@ Créer des applications pour le Web permet aux développeurs d'avoir un contrôl
 ;Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
 En utilisant des standards ouverts et des API conçues par Mozilla, vous pourrez déployer vos applications sur de multiples plateformes, appareils et systèmes d'exploitation — comblant pour la première fois le fossé entre le Web et les applications natives.
 
-;Learn all about creating HTML5 apps at the Mozilla Developer Network »
-Tout savoir sur le développement d'applications HTML5 grâce au Mozilla Developer Network »
+;Learn all about creating HTML5 apps at the Mozilla Developer Network&nbsp;»
+Tout savoir sur le développement d'applications HTML5 grâce au Mozilla Developer Network&nbsp;»
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
