--- a/csb/whatsnew.lang
+++ b/csb/whatsnew.lang
@@ -45,7 +45,7 @@ Czëtôj wicy ò <a href="{url}">naszi nowi domôcy stronie »</a>
 Pòmòżë w rozwijanim
 
 ;Get Firefox » <b>for Android</b>
-Scygni Firefox » <b>dlô Androida</b>
+Scygni Firefoksa » <b>dlô Androida</b>
 
 
 ;Keep it going
@@ -57,4 +57,5 @@ Przëłączë sã do Mozillë
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-Robòt Androida je òpiarti na zdoju <a href="%s">Googla</a> ë je ùżëwóny wedle ùmòwów  òpisónëch w <a href="%s">Atribùtach Licencji Creative Commons 3.0</a>.
+Robòt Androida je òpiarti na zdroju <a href="%s">Googla</a> ë je ùżëwóny wedle ùmòwów  òpisónëch w <a href="%s">Atribùtach Licencji Creative Commons 3.0</a>.
+
