l10n: fr, translation update by Goofy
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106350 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -126,7 +126,7 @@ Rapide et surtout… rapide&nbsp;! <a %s>Firefox pour Android vient de bénéfic
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox a de nouvelles fonctionnalités qui vous permettront de passer encore plus vite d'une tâche à la suivante&nbsp;! <a href="%">Pour en savoir plus, jetez un coup d'œil à la vidéo.</a>
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
