Large number of updates to take this to 100% complete
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106429 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/channelsposter.lang
+++ b/ff/channelsposter.lang
@@ -55,7 +55,7 @@ Topotooɓe geese/yuɓɓoo, huutorɓe adanɓe e suuɓe coono
 
 
 ;Access to experimental new features - your feedback helps determine what makes it to Beta
-Huutoro fannuuji ƴeewndorɗi kesi - dittine maa maa mballu-min suɓaade ko naatnetee e Betaa
+Huutoro fannuuji ƴeewndorɗi kesi - duttine maa mballat-min suɓaade ko naatnetee e Betaa
 
 
 ;Test builds with bugs and incompatible add-ons
