--- a/ff/firefoxtesting.lang
+++ b/ff/firefoxtesting.lang
@@ -23,7 +23,7 @@ Firefox Betaa mo Cinndel
 
 
 ;Download Beta and be part of the next version of Firefox.
-Aawto Betaa ngam jeyeede e yamre Firefox aroore.
+Aawto Betaa ngam jeyeede e yamere Firefox aroore.
 
 
 ;1. Test Features
@@ -35,11 +35,11 @@ Aawto Betaa ngam jeyeede e yamre Firefox aroore.
 
 
 ;2. Refine &amp; Polish
-2. Juɓɓitingol &amp; Teelto
+2. Yuɓɓitin &amp; Teelto
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-Fiillo bugge ngam wallude min naatnude peewtine sakket haa Firefoù ɓeydoo juɓɓugol, fannitoore tawa ko e weeyo yamɗungo.
+Fiillo bugge ngam wallude min naatnude peewtine sakket haa ɓeydoo juɓɓugol, fannitoore tawa ko e weeyo yamɗungo.
 
 
 ;3. Do Your Part
