--- a/ff/foundationsection.lang
+++ b/ff/foundationsection.lang
@@ -3,7 +3,7 @@
 
 
 ;Welcome
-On Jaɓɓaama
+On njjaɓɓaama
 
 
 ;Opportunities
@@ -15,7 +15,7 @@ Yontaaɓe
 
 
 ;Ahead
-To Fayaa
+To fayaa
 
 
 ;Download this video:
@@ -87,4 +87,4 @@ Mozilla Enndonesii
 
 
 ;Other languages & sharing
-Ɗemɗe goɗɗe & lollingol
+Ɗemɗe goɗɗe & cimmingol
