--- a/ff/newsletter.lang
+++ b/ff/newsletter.lang
@@ -1,6 +1,3 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
 Heɓ kabaruuji lewriije
 
@@ -54,11 +51,11 @@ Lulno e kesɗitine lewriije ngam humpitaade ko joli e Mozilla, kadi ɓeydaa hump
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Min neldiima jooni ɓatakuru teeŋtino e wakannde iimeel maa. Dobo e jokkol teeŋtinol ngonngol e iimeel oo ngam timminde lulnogol maa e doggol jeewte ngol..
+Min neldiima jooni ɓatakuru teeŋtino e wakannde iimeel maa. Dobo e jokkol teeŋtinol ngonngol e iimeel oo ngam timminde lulnogol maa e doggol jeewte ngol.
 
 
 ;Read all about it in our <span>newsletter</span>
-Ɓeydu humpito baɗte mum e  <span>newsletter</span> amen
+Ɓeydu humpito baɗte mum e <span>newsletter</span> amen
 
 
 ;Your newsletter subscription has been confirmed.
@@ -86,7 +83,7 @@ Hakkunde maa & Firefox
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-GHeɓ ƴoƴe cakkitiiɗe e peeje heɓde ngartam moƴƴam e wanngorde maa labaande.
+Heɓ ƴoƴe cakkitiiɗe e peeje heɓde ngartam moƴƴam e wanngorde maa labaande.
 
 
 ;Firefox Mobile
@@ -182,14 +179,12 @@ A jaaraama e habrude-min ko waɗ maa yahde.
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-A jaaraama! Tiiɗno ƴeew wakannde ɓatakeeji maa ngam teeŋtinde binnditagol maa.
+A jaaraama! Tiiɗno ƴeewto wakannde ɓatakeeji maa ngam teeŋtinde binnditagol maa.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-Maa heɓ iimeel ummiiɗo to mozilla@e.mozilla.org ngam teeŋtinde binnditagol maa. So a yiyaani iimeel oo, ƴeewto seɗorde spam maa. Alaa e sago teeŋtinaa binnditagol maa ndee keɓaa ɓatakeeji amen.
+Maa heɓ iimeel ummoraade e mozilla@e.mozilla.org ngam teeŋtinde binnditagol maa. So a heɓaani-mo, ƴeewto seɗorde spamuuji maa. Alaa e sago teeŋtinaa binnditagol maa ngam heɓde ɓataake amen habrirde.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Tiiɗno ɓeydu ñiiɓirde amen neldirde ndee: mozilla@e.mozilla.org e doggol jokkondire maa mbele min mbaawa heɓde-ma sahaa kala.
-
-
+Tiiɗno waɗ feere ɓeydaa ñiiɓirde amen neldirnde: mozilla@e.mozilla.org e doggol jokkondire maa ngam laaɓeede maa ɓatakeeji amen njetto wakannde maa.
