--- a/ff/press.lang
+++ b/ff/press.lang
@@ -11,7 +11,7 @@ Kabaruuji Mozilla, Tintinde e Ko wonaa ɗum
 
 
 ;Connect <span>with Us</span>
-jokkondir <span>e amen</span>
+Jokkondir <span>e amen</span>
 
 
 ;Subscribe to RSS feed »
