--- a/ff/snippets.lang
+++ b/ff/snippets.lang
@@ -1,8 +1,5 @@
-# these text snippets are mostly used on about:home
-
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Nawor Firefox ɗo njahataa fof! Firefox cakkitiiɗo mo Android ena ɗoo hebii tolbec ngam weytaare maa. <a href="%s">Heɓ ɗum jooni.</a>
+Nawor Firefox ɗo njahataa fof! Firefox cakkitiiɗo mo Android ena ɗoo hebii tolbec ngam weytaare maa. <a href="%s">Heɓ ɗum jooni.</a>.
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
@@ -127,5 +124,3 @@ Njaawee, njaawee, njaawee. <a %s>Firefox mo Android heɓii kesɗitinal mawngal</
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
 Firefox ena jogii fannuuji kesi ngam siynude golle maa no yaawiri! <a href="%">Ƴeew ngol lefol widewoo ngam ɓeydude humpito.</a>
-
-
