--- a/ff/videos/video_fx13.lang
+++ b/ff/videos/video_fx13.lang
@@ -1,4 +1,4 @@
-﻿;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
 [Hol ko hesɗi e Firefox] Jooni ɓeydiima weeɓde e yaawde yettaade ɗo njiɗ-ɗaa yahde huutoraade Firefox keso oo.
 
 
