--- a/ff/firefoxlive.lang
+++ b/ff/firefoxlive.lang
@@ -15,7 +15,7 @@ Kameraaji
 
 
 ;360° view
-Jiytol 360°
+jiytol 360°
 
 
 ;Camera 1
@@ -31,7 +31,7 @@ Ballal widewoo
 
 
 ;Do you like baby animals? Mozilla Firefox is streaming video of their 3 adopted red panda babies. Spread the word and 'share' with your friends.
-Aɗa yiɗi tigguyon kulle ladde? Mozilla Firefox ena siiɓtoroo widewoo tigguyon panndaaji mum 3 boɗeeji nehaaɗi. Sar kabaaru ngam tintinde musidɓe maa.
+Aɗa yiɗi tigguyon kulle ladde? Mozilla Firefox ena siiɓtoroo widewoo tigguyon panndaaji mum 3 boɗeeji nehaaɗi. Sar kabaaru ooo tee 'simmin' heen bannde en.
 
 
 ;What is more endearing? Firefox’s non-profit mission or a live feed of their animal mascot? Find out http://mzl.la/sPo5yu
@@ -43,8 +43,8 @@ Wallu Firefox reende kumbel mum caɗtuɗo e Geese ɗee so ndaarde ɓiykon kulle!
 
 
 ;Share on Twitter »
-Lollin e Twitter »
+Simmin e Twitter »
 
 
 ;Share on Facebook »
-Lollin e Facebook »
+Simmin e Facebook »
