--- a/gd/channelsposter.lang
+++ b/gd/channelsposter.lang
@@ -35,11 +35,11 @@ A' cur fo dheuchainn an ath-thionndadh seasmhach de Firefox
 
 
 ;Mostly stable builds that need fine tuning and majority add-on compatibility
-Builgs a bhios seasmhach mar is trice ach a tha feumach air cur air gleus; co-chòrdail leis a' chuid as motha dhe na tuilleadain.
+Builds a bhios seasmhach mar is trice ach a tha feumach air cur air gleus; co-chòrdail leis a' chuid as motha dhe na tuilleadain
 
 
 ;Everyone! Released to the more than 400 million Firefox users worldwide
-A h-uile duine! Air a sgaoileadh gu barrachd air 400 millean de dhaoine air feadh an t-saoghail a chleachdas Firefox.
+A h-uile duine! Air a sgaoileadh gu barrachd air 400 millean de dhaoine air feadh an t-saoghail a chleachdas Firefox
 
 
 ;The polished and stable features of Firefox that move the Web forward with great performance and unparalleled customization
