--- a/gd/upgradedialog.lang
+++ b/gd/upgradedialog.lang
@@ -63,7 +63,7 @@ Chan eil an tionndadh de Firefox a tha agad dìonta o ionnsaighean air loidhne t
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-Seo an cuimhneachan mu dheireadh a bheir sinn dhut mus dèid àrdachadh gun tionndadh as ùire gu fèin-obrachail.
+Seo an cuimhneachan mu dheireadh a bheir sinn dhut mus dèid àrdachadh gun tionndadh as ùire gu fèin-obrachail
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
