--- a/gd/upgradepromos.lang
+++ b/gd/upgradepromos.lang
@@ -35,7 +35,7 @@ Sin thu, tha coltas gu bheil thu a' cleachdadh %BROWSER%. Carson nach feuch thu 
 
 
 ;Hey, looks like you’re not using Firefox as your browser. Why not grab Firefox and get up to speed.
-Sin thu, tha coltas nach eil thu a' cleachdadh %BROWSER%. Carson nach feuch thu Firefox?
+Sin thu, tha coltas nach eil thu a' cleachdadh Firefox mar bhrabhsair. Carson nach feuch thu Firefox?
 
 
 ;New Firefox is faster, free (as always), crashes less and protects your privacy more.
