--- a/gd/videos/video_fx13.lang
+++ b/gd/videos/video_fx13.lang
@@ -11,7 +11,7 @@ Can na luchdaich thu a-nuas, na comharran-lìn, an eachdraidh, na tuilleadain, a
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[Duilleag taba ùr] Leasaich sinn duillean nan tabaichean ùra cuideachd.
+[Duilleag taba ùr] Leasaich sinn duilleag nan tabaichean ùra cuideachd.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
@@ -31,7 +31,7 @@ Chì thu dealbhagan dhe na làraichean-lìn air an do thadhail thu gu tric o chi
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Briog air a' phrìne gus làrach a ghlasadh san ìate sin no air an X gus làrach a thoirt air falbh.
+Briog air a' phrìne gus làrach a ghlasadh san àite sin no air an X gus làrach a thoirt air falbh.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
