--- a/ast/whatsnew.lang
+++ b/ast/whatsnew.lang
@@ -2,62 +2,60 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+¡Bien! Firefox ta anováu.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Firefox nun ta anováu.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Por razones de seguridá, encamentámoste que lu anoves a la <a href="{url}">cabera y meyor versión</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Tas executando una versión desconocida de Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Por razones de seguridá encamentámoste que descargues la <a href="{url}">cabera y meyor versión</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Accede a la to siguiente xera<br/>más rápido que nunca
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Mira cómo t'ayuden les nueves carauterístiques de Firefox a navegar d'una mou más rápidu y eficiente.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Descubre más sobre <a href="{url}">la función Llingüeta nueva »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Descubre más sobre la <a href="{url}">nueva página de inicio »</a>
 
 
 ;Keep in touch
-Keep in touch
+Calténte al día
 
 
 ;Keep it moving
-Keep it moving
+Sigui en movimientu
 
 
-;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+;Get Firefox » <b>for Android</b>
+Obtener Firefox » <b>p'Android</b>
 
 
 ;Keep it going
-Keep it going
+¡Síguinos!
 
 
 ;Join Mozilla
-Join Mozilla
+Xúnite a Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
-
+Android Robot ye una reproducción de la obra creada y <a href="%s">compartida por Google</a> y úsase d'acuerdu a los términos que se describen na <a href="%s">llicencia Reconocimientu de Creative Commons 3.0</a>.
