--- a/ast/videos/video_fx13.lang
+++ b/ast/videos/video_fx13.lang
@@ -1,42 +1,43 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Qué hai nuevo en Firefox] Agora ye más cenciello y rápido aportar au quies dir con Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Col rediseñu de la páxina d'aniciu pues acceder y navegar fácilmente peles opciones del menú qu'uses davezu.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Como descargues, marcadores, historial, complementos, sync y configuración.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Páxina Llingüeta nueva] Tamién ameyoramos la páxina Llingüeta nueva.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Cola páxina Llingüeta nueva, vas poder navegar fácilmente a los sitios que visites más frecuentemente con un sólu clic.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Pa entamar a usar la páxina de Llingüeta nueva, crea una llingüeta nueva con un clic nel '+' na parte superior del to navegador.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+La páxina Llingüeta nueva, amosará miniatures de los sitios web que frecuentes o que visitaste caberamente basándose nel to historial.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Pues modificar la páxina Llingüeta nueva si arrastres les miniatures pa camudar l'orde.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Pues facer clic na chincheta pa fixar el sitiu nel llugar, o'l botón 'X' pa desaniciar el sitiu.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Tamién pues facer clic nel iconu de 'rexella' que ta na parte superior derecha de la páxina pa volver a tener la páxina en blanco pa la páxina de Llingüeta nueva.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+¡Descarga'l nuevu Firefox y entama a usar estes funciones yá mesmo!
+
