l10n: evernote video pt-BR subtitles
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106515 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/videos/video_evernote.lang
+++ b/pt-BR/videos/video_evernote.lang
@@ -1,108 +1,81 @@
 ;Evernote is a service that helps you remember everything.
-Evernote is a service that helps you remember everything.
-
+Evernote é um serviço que ajuda você a lembrar de tudo.
 
 ;We have clients on every platform: mobile, desktop, web
-We have clients on every platform: mobile, desktop, web
-
+Nós temos clientes para todas as plataformas: móvel, desktop, web
 
 ;and basically it helps you capture your memories
-and basically it helps you capture your memories
-
+e basicamente ele ajuda a capturar as suas memórias
 
 ;and then find them whenever you need them.
-and then find them whenever you need them.
-
+e depois encontrá-las sempre que precisar delas.
 
 ;whether they are web pages or notes or things you need to do.
-whether they are web pages or notes or things you need to do.
-
+sejam páginas da internet ou anotações ou coisas a fazer.
 
 ;Pictures, audio clips; anything you want
-Pictures, audio clips; anything you want
-
+Imagens, músicas; tudo que você quiser
 
 ;Evernote is basically everywhere that you need it to be.
-Evernote is basically everywhere that you need it to be.
-
+O Evernote está em basicamente todos os lugares que você precisa que ele esteja.
 
 ;We’re on mobile, we’re on desktop, we’re on web
-We’re on mobile, we’re on desktop, we’re on web
-
+Estamos no seu telefone, no seu computador, na internet
 
 ;and all of these apps synch together.
-and all of these apps synch together.
-
+e todos esse aplicativos funcionam sincronizados.
 
 ;The web is a big part of our offering.
-The web is a big part of our offering.
-
+A internet é uma grande parte da nossa oferta.
 
 ;Many, many users use our web clipper as a way
-Many, many users use our web clipper as a way
-
+Muitos, muitos usuários usam nosso agregador como uma forma
 
 ;to capture pages that they see and then recall them later,
-to capture pages that they see and then recall them later,
-
+de capturar páginas que eles veem para lê-las mais tarde,
 
 ;even when they are offline and they don’t have access to the Internet.
-even when they are offline and they don’t have access to the Internet.
-
+mesmo que estejam off-line e não tenham acesso à internet.
 
 ;Using modern web technologies lets us give the best and richest experience we can for our users.
-Using modern web technologies lets us give the best and richest experience we can for our users.
-
+Usando tecnologias modernas da web, podemos oferecer a melhor e mais rica experiência possível para nossos usuários.
 
 ;So HTML5 gave a fast user experience.
-So HTML5 gave a fast user experience.
-
+Então o HTML5 nos deu experiência de uso rápida.
 
 ;It has all the things you expect from a desktop application
-It has all the things you expect from a desktop application
-
+Ele tem todas as coisas que você espera de uma aplicação desktop
 
 ;whether its drag and drop, file manipulation, rich text editing,
-whether its drag and drop, file manipulation, rich text editing,
-
+seja arrastar-e-soltar, manipulação de arquivos, edição de texto rica,
 
 ;all of that just inside of the browser without a heavyweight application installation.
-all of that just inside of the browser without a heavyweight application installation.
-
+tudo isso dentro do navegador sem precisar instalar um aplicação pesada.
 
 ;So Evernote’s goal is to help you remember everything
-So Evernote’s goal is to help you remember everything
-
+Então o objetivo do Evernote é ajudar você a se lembrar de tudo
 
 ;and a big part of that is to help you remember things when you’re browsing around the web.
-and a big part of that is to help you remember things when you’re browsing around the web.
-
+e uma grande parte disso é ajudá-lo a lembrar coisas enquanto está navegando na internet.
 
 ;You’re trying to find some information.
-You’re trying to find some information.
-
+Você está tentando encontrar informações.
 
 ;Working with the Mozilla Marketplace was really easy.
-Working with the Mozilla Marketplace was really easy.
-
+Trabalhar com o Mozilla Marketplace foi muito fácil.
 
 ;Making the manifest file was a simple JSON file and then interacting with the website
-Making the manifest file was a simple JSON file and then interacting with the website
-
+Criar um arquivo de manifesto foi um simples JSON e então interagir com o site
 
 ;to actually get our application into the marketplace
-to actually get our application into the marketplace
-
+para inserir de fato nosso aplicativo no Marketplace
 
 ;was straightforward and very self-explanatory.
-was straightforward and very self-explanatory.
-
+foi muito prático e autoexplicativo.
 
 ;The advertising and access to new users from the web is great through the Mozilla Marketplace.
-The advertising and access to new users from the web is great through the Mozilla Marketplace.
-
+A publicidade e acesso de novos usuários da web é grande atraveś do Mozilla Marketplace.
 
 ;distribute your apps
-distribute your apps
-
+distribua seus aplicativos
 
