--- a/pt-BR/marketplace/partners.lang
+++ b/pt-BR/marketplace/partners.lang
@@ -16,6 +16,9 @@ Este vídeo requer um navegador com suporte a vídeo aberto ou o plug-in <a href
 ;Learn all about creating HTML5 apps at the Mozilla Developer Network&nbsp;»
 Saiba tudo sobre como criar aplicativos usando HTML5 no Mozilla Developer Network&nbsp;»
 
+;Learn all about creating HTML5 apps at the Mozilla Developer Network »
+Saiba tudo sobre como criar aplicativos usando HTML5 no Mozilla Developer Network&nbsp;»
+
 ;The Mozilla apps platform
 A plataforma de aplicativos Mozilla
 
@@ -43,6 +46,9 @@ Usando padrões abertos da internet e as APIs concebidas pela Mozilla, ótimas e
 ;Test your app with a committed group of early adopters.
 Testar seus aplicativos com um grupo empenhado de usuários pioneiros.
 
-
 ;Submit your app&nbsp;»
-Envie seu aplicativo »
+Envie seu aplicativo&nbsp;»
+
+;Submit your app »
+Envie seu aplicativo&nbsp;»
+
